--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body{
     width: 100%;
     height: 100%;
     display: flex;
-    justify-content: center;
+   
     align-items: center;
     flex-direction: column;
 }
@@ -105,5 +105,24 @@ body{
 
 .hide{
     display: none;
+}
+
+.dominio{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    margin-top: 30px;
+    
+    
+}
+
+
+.dominio label{
+    display: flex;
+    align-items: center;
+    display: contents;
+    
+    
+    
 }
 
